--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material/button": "^8.0.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
