--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
     "@material/button": "^8.0.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
