--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-syntax-highlighter": "^15.3.1"
   }
 }
